Initial CSS and JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,44 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>Hi There</h1>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
+  </head>
+  <body class="main-body">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="header-title">Devin Riley: Human Being</h1>
+          <span class="header-subtitle">and web developer.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-3 nav-link">
+          <h3>
+            <a href="#">Blog</a>
+          </h3>
+        </div>
+
+        <div class="col-md-3 nav-link">
+          <h3>
+            <a href="#">Projects</a>
+          </h3>
+        </div>
+
+        <div class="col-md-3 nav-link">
+          <h3>
+            <a href="#">Resume</a>
+          </h3>
+        </div>
+
+      </div> <!-- row -->
+
+    </div>
   </body>
 </html>
