Remove old blog directories, add blog css

--- a/blog_index.html
+++ b/blog_index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title:  Code Breaker
 ---
 
-<div id="home">
+<div class="container-fluid" id="home">
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
