WIP: Canvas animations in projects.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="col-md-4 nav-link">
           <h3>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
           </h3>
         </div>
 
