--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,10 @@
 	var main = function() {
     initCanvas();
     initPortrait();
+    blocks = initBlocksObject();
     window.onresize = resizeCanvas;
 	}
+
 
   var initCanvas = function() {
 		canvas = document.getElementById('bigCanvas');
@@ -20,6 +22,42 @@
     img = new Image;
     img.src = 'self_portrait.jpg';
     img.onload = resizePortrait;
+  }
+
+  var initBlocksObject = function() {
+    function Blocks(ctx) {
+      // This is the Blocks constructor function
+      this.pixels = [];
+      this.ctx = ctx;
+      this.numCols = Math.ceil(ctx.canvas.width  / BLOCK_WIDTH);
+      this.numRows = Math.ceil(ctx.canvas.height  / BLOCK_HEIGHT);
+      this.fillPixels = function() {
+        for (var row = 0; row <= this.numRows; row++) {
+          for (var col = 0; col <= this.numCols; col++) {
+            (row * col % 2 == 0) ? this.pixels.push("#FFFFFF") : this.pixels.push("#000000");
+          }
+        }
+      }
+
+     this.eachBlock = function(callback) {
+       for (var row = 0; row <= this.numRows; row++) {
+         for (var col = 0; col <= this.numCols; col++) {
+           callback.call()
+         }
+       }
+     }
+
+      this.draw = function() {
+        var pixCount = 0;
+        var that = this;
+        this.eachBlock(function() {
+          ctx.fillStyle = that.pixels[pixCount];
+          ctx.fillRect(col * BLOCK_WIDTH, row * BLOCK_WIDTH, BLOCK_WIDTH, BLOCK_WIDTH);
+          pixCount += 1;
+        });
+      }
+    }
+    return new Blocks(ctx);
   }
 
   var resizePortrait = function() {
@@ -114,7 +152,7 @@
         }
       }
     }
-    setTimeout(requestNextFrame, 40);
+    //setTimeout(requestNextFrame, 40);
 
   }
 
