DR: Split self-portrait into its own files, choose new image

--- a/projects.html
+++ b/projects.html
@@ -1,180 +1,12 @@
 <html>
-	<script>
-  BLOCK_WIDTH  = 8 
-  BLOCK_HEIGHT = 8;
-  COLOR_VALUES = [150, 250, 50, 100, 0]
-
-	var main = function() {
-    initCanvas();
-    initPortrait();
-    blocks = initBlocksObject();
-    window.onresize = setCanvasSize();
-	}
-
-  var initCanvas = function() {
-		canvas = document.getElementById('bigCanvas');
-		ctx = canvas.getContext('2d');
-    setCanvasSize();
-  }
-
-  var initPortrait = function() {
-    img = new Image;
-    img.src = 'self_portrait.jpg';
-    img.onload = resizePortrait;
-  }
-
-  var initBlocksObject = function() {
-    function Blocks(ctx) {
-      // This is the Blocks constructor function
-      this.pixels = [];
-      this.ctx = ctx;
-      this.numCols = Math.ceil(ctx.canvas.width  / BLOCK_WIDTH);
-      this.numRows = Math.ceil(ctx.canvas.height  / BLOCK_HEIGHT);
-      this.fillPixels = function() {
-        var pixCount = 0;
-        this.eachBlock(function(row, col) {
-          index = (pixCount * 4);
-          var gray = tinyData.data[index]
-          this.pixels.push("rgb(" + gray + "," + gray + "," + gray + ")")
-          pixCount += 1;
-        })
-      }
-
-     this.drawImage = function(pixelData, width) {
-       var count = 0;
-       var pixCount = 0;
-       var offset = (this.numCols - width) / 2 // for centering image
-       this.eachBlock(function(row, col) {
-         if (col > offset && col < width + offset) { // only draw image data in centered area
-           // grab pixel grayscale value from image data
-           gray = pixelData[pixCount * 4] // sample every 4th point of RGBA data
-           this.pixels[count] = gray
-           pixCount += 1;
-         }
-         else {
-           // just draw white otherwise
-           this.pixels[count] = 255;
-         } 
-         count += 1; 
-       });
-
-     }
-     this.eachBlock = function(callback) {
-       var count = 0;
-       for (var row = 0; row <= this.numRows; row++) {
-         for (var col = 0; col <= this.numCols; col++) {
-           callback.call(this, row, col, count)
-           count += 1;
-         }
-       }
-     }
-
-     this.randomColor = function(current) {
-       // sample from our color array, then subtract passed-in current pixel value
-       return COLOR_VALUES[Math.floor(Math.random() * COLOR_VALUES.length)] - (255 - current)
-     }
-
-     this.draw = function() {
-       var pixCount = 0;
-       this.eachBlock(function(row, col, count) {
-         if (Math.random() > 0.993) {
-           pixel = this.pixels[count];
-           rgb = [this.randomColor(pixel), this.randomColor(pixel), this.randomColor(pixel)]
-           ctx.fillStyle = "rgb(" + rgb[0] + "," + rgb[1] + "," +  rgb[2] + ")";
-           ctx.fillRect(col * BLOCK_WIDTH, row * BLOCK_WIDTH, BLOCK_WIDTH, BLOCK_WIDTH);
-           pixCount += 1;
-         }
-       });
-     }
-   }
-   return new Blocks(ctx);
-  }
-
-  var resizePortrait = function() {
-    // Turn off smoothing to get pixelated effect
-    ctx.mozImageSmoothingEnabled = false;
-    ctx.webkitImageSmoothingEnabled = false;
-    ctx.imageSmoothingEnabled = false;
-    // save aspect ratio
-    img.ratio = img.width / img.height
-    // resize original image to fit viewport
-    ctx.drawImage(img, 0, 0, img.ratio * canvas.height, canvas.height)
-    // take that image and calc total pixels
-    sizedImgData = ctx.getImageData(0, 0, img.ratio * canvas.height, canvas.height)
-    // Divide total real pixels by area of a single "new" pixel
-    totalPixels = (sizedImgData.width * sizedImgData.height) / (BLOCK_WIDTH * BLOCK_HEIGHT)
-    // find height of new image with fewer  pixels
-    height_sq = totalPixels / img.ratio
-    tiny_h = Math.round(Math.sqrt(height_sq))
-    // find width of new image with fewer pixels
-    tiny_w = Math.round(tiny_h * img.ratio)
-    // Draw tiny image
-    ctx.drawImage(img, 0, 0, tiny_w, tiny_h)
-    // get tiny image data and convert to grayscale
-    tinyData = ctx.getImageData(0, 0, tiny_w, tiny_h);
-    convertToGrayscale(tinyData.data);
-    // redraw gray version on canvas
-    ctx.putImageData(tinyData, 0, 0)
-    // blow up tiny image to draw final pixelated image
-    pixelatedImgWidth = canvas.height * img.ratio
-    ctx.drawImage(canvas, 0, 0, tiny_w, tiny_h, imageMargin(pixelatedImgWidth), 0, pixelatedImgWidth, canvas.height)
-    blackOutCanvas();
-    window.requestAnimationFrame(drawPattern);
-  }
-
-  var convertToGrayscale = function(data) {
-    // takes in ImageData.data and converts it to grayscale
-    for(var i = 0; i < data.length; i += 4) {
-      var brightness = 0.34 * data[i] + 0.5 * data[i + 1] + 0.16 * data[i + 2];
-      // fill the RGB pixels with the same brightness value to get gray
-      data[i] = brightness;
-      data[i + 1] = brightness;
-      data[i + 2] = brightness;
-    }
-  }
-  
-  var imageMargin = function(img_width) {
-    return (canvas.width - img_width) / 2
-  }
-
-  var blackOutCanvas = function() {
-    ctx.fillRect(0,0,canvas.width, canvas.height); // initialize with black
-  }
-
-  var setCanvasSize = function() {
-    canvas.width  = window.innerWidth
-    canvas.height = window.innerHeight
-  }
-
-
-  var drawPattern = function(step) {
-    blocks.drawImage(tinyData.data, tiny_w);
-    blocks.draw();
-    setTimeout(requestNextFrame, 40);
-  }
-
-  var requestNextFrame = function() {
-    window.requestAnimationFrame(drawPattern);
-  }
-
-	</script>
-    <style type="text/css">
-      canvas { 
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-      }
-
-      #text-container {
-        padding: 50px;
-        opacity: 0.9;
-        background-color: black;
-        color: white;
-      }
-    </style>
-	<body onload="main();">
-		<canvas id="bigCanvas"></canvas>
+	<body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+          <a href="/sketches/self_portrait.html">Self Portrait</a>
+        </div>
+      </div>
+    </div>
 	</body>
 
 </html>
